--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,18 +1,29 @@
 name: Pruebas automáticas del grupo
+
 on:
- push:
- branches:
- - main
- - '*'
+  push:
+    branches:
+      - main
+      - '*'
+
 jobs:
- test:
- runs-on: ubuntu-latest
- steps:
- - name: Clonar el repositorio
- uses: actions/checkout@v3
- - name: Configurar Python
- uses: actions/setup-python@v4
- with:
- python-version: '3.10'
- - name: Instalar dependencias
- run: |
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Clonar el repositorio
+        uses: actions/checkout@v3
+
+      - name: Configurar Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Instalar dependencias
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install pytest
+
+      - name: Ejecutar pruebas
+        run: |
+          python -m pytest -v
