--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,29 +1,37 @@
+#workflow corregido
 name: Pruebas automáticas del grupo
 
 on:
   push:
     branches:
       - main
-      - '*'
+      - '**'          # Se ejecuta en main y en cualquier otra rama
+  pull_request:
+    branches:
+      - main          # También corre en PR hacia main
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Clonar el repositorio
       - name: Clonar el repositorio
         uses: actions/checkout@v3
 
+      # 2️⃣ Configurar Python
       - name: Configurar Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
+      # 3️⃣ Instalar dependencias
       - name: Instalar dependencias
         run: |
           python -m pip install --upgrade pip
           python -m pip install pytest
 
+      # 4️⃣ Ejecutar pruebas
       - name: Ejecutar pruebas
         run: |
           python -m pytest -v
