cambio final en el workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,23 +15,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Clonar el repositorio
+      # 1 Clonar el repositorio
       - name: Clonar el repositorio
         uses: actions/checkout@v3
 
-      # 2️⃣ Configurar Python
+      # 2 Configurar Python
       - name: Configurar Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      # 3️⃣ Instalar dependencias
+      # 3 Instalar dependencias
       - name: Instalar dependencias
         run: |
           python -m pip install --upgrade pip
           python -m pip install pytest
 
-      # 4️⃣ Ejecutar pruebas
+      # 4 Ejecutar pruebas
       - name: Ejecutar pruebas
         run: |
           python -m pytest -v
